added list by fastest growing families and highest accumulated age
