# internal/service/response.go
@@ -291,3 +291,63 @@ type DeleteMemberResponse struct {
 	// example: success
 	Message string `json:"message"`
 }
+
+// ListAccumulatedFamiliesResponse
+//
+// Response by ListAccumulatedFamilies Service.
+//
+// swagger:model
+type ListAccumulatedFamiliesResponse struct {
+	// the id for the request
+	//
+	// required: true
+	// example: 8957bf28-aea0-47de-abe0-d4c5ea593ec6
+	Id string `json:"id"`
+
+	// the response code for the request
+	//
+	// required: true
+	// example: 200
+	Code int `json:"code"`
+
+	// the message for the request
+	//
+	// required: true
+	// example: success
+	Message string `json:"message"`
+
+	// the members for the request
+	//
+	// required: true
+	Result []family.AgeFamily `json:"result,omitempty"`
+}
+
+// ListFastestGrowingFamiliesResponse
+//
+// Response by ListFastestGrowingFamilies Service.
+//
+// swagger:model
+type ListFastestGrowingFamiliesResponse struct {
+	// the id for the request
+	//
+	// required: true
+	// example: 8957bf28-aea0-47de-abe0-d4c5ea593ec6
+	Id string `json:"id"`
+
+	// the response code for the request
+	//
+	// required: true
+	// example: 200
+	Code int `json:"code"`
+
+	// the message for the request
+	//
+	// required: true
+	// example: success
+	Message string `json:"message"`
+
+	// the members for the request
+	//
+	// required: true
+	Result []family.AgeFamily `json:"result,omitempty"`
+}
